# lubeck

./: .gitignore  Cargo.toml  README.md
book/: book.toml
book/src/: SUMMARY.md
book/src/chapter_1/: introduction.md
book/src/chapter_2/: introduction.md
book/src/chapter_3/: introduction.md
doc/: GIT_COMMITS.md
examples/: cont.rs  reader.rs
src/: lib.rs  main.rs  traits.rs
src/common/: mod.rs  state.rs
src/common/cont/: def.rs  functor.rs  mod.rs  monad.rs
src/common/reader/: applicative.rs  def.rs  functor.rs  higherkinded.rs  mod.rs  monad.rs
src/stdimpl/: applicative.rs  functor.rs  higherkinded.rs  mod.rs  monad.rs  monoid.rs  semigroup.rs
src/stdimpl/integer/: mod.rs
src/stdimpl/option/: applicative.rs  functor.rs  higherkinded.rs  mod.rs  monad.rs
tests/: basic.rs  monoid_impls.rs  semigroup_impls.rs
