[package]
name = "lubeck"
version = "0.0.0"
edition = "2021"
license = "MIT"
keywords = ["functional", "haskell", "fp", "functors", "monads"]
authors = ["Robert Walter <robwalter96@gmail.com>"]
description = "Functional programming framework written in cutting edge rust"
homepage = "https://github.com/RobWalt/lubeck"
repository = "https://github.com/RobWalt/lubeck"
documentation = "https://docs.rs/lubeck"
readme = "README.md"

[dependencies]
paste = "1.0"

[dev-dependencies]
proptest = "1.0"
